[tool.poetry]
name = "dash-auth-flow"
version = "0.1.0"
description = ""
authors = ["Russell Romney <russellromney@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.8.1"
dash-bootstrap-components = "^1.3.1"
Flask-Login = "^0.6.2"
Flask-SQLAlchemy = "^3.0.3"
shortuuid = "^1.0.11"
requests = "^2.31.0"
mailjet-rest = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
